--- a/_layouts/dashboard.html
+++ b/_layouts/dashboard.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{ page.title }} - LondonBlog</title>
-  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/dashboard.css">
+  <link rel="stylesheet" href="/assets/css/dashboard.css">
   <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
